# ai-bootcamp-agentic-rag

./: .gitignore  Makefile  README.md  Untitled  docker-compose.yml  env.example  pyproject.toml
apps/api/: Dockerfile  pyproject.toml
apps/api/evals/: eval_retriever.py
apps/api/src/server/: app.py
apps/api/src/server/agents/: agents.py  graph.py  models.py  reranker.py  retrieval_generation.py  tools.py
apps/api/src/server/agents/prompts/: aggregator_agent.yml  query_expand_agent.yml  router_agent.yml  search_agent.yml
apps/api/src/server/agents/utils/: utils.py
apps/api/src/server/api/: endpoints.py  middleware.py  models.py
apps/api/src/server/core/: config.py
apps/chatbot_ui/: Dockerfile
apps/chatbot_ui/src/chatbot_ui/: app.py
notebooks/week_1/: 01-explore-amazon-dataset.ipynb  02-RAG-preprocessing-amazon.ipynb  03-RAG-pipeline.ipynb  04-evaluation-dataset.ipynb  05-ragas-evaluate-RAG.ipynb
notebooks/week_2/: 03-hybrid-search-with-rag.ipynb  05-prompt-versioning.ipynb
notebooks/week_3/: 01-langgraph-intro.ipynb  02-query-rewriting.ipynb  03-router.ipynb  04-ReAct-agent.ipynb
notebooks/week_3/utils/: __init__.py
notebooks/week_4/: 01-multi-turn-agent.ipynb
notebooks/week_4/utils/: utils.py
postgres_data/pgdata/: postmaster.pid
postgres_data/pgdata/base/1/: 112  113  1247  1247_vm  1249  1249_vm  1255  1255_fsm  1255_vm  1259  1259_fsm  1259_vm  13457  2619  2696  2841
postgres_data/pgdata/base/16384/: 1247  1249  (+59 more)
postgres_data/pgdata/global/: 1260  1262  2671  2676  pg_control  pg_internal.init
qdrant_storage old/: raft_state.json
(+3 files in other folders)
